--- a/RNN,_LSTM_Models_&_GRU_Models,_Transfer_learning.ipynb
+++ b/RNN,_LSTM_Models_&_GRU_Models,_Transfer_learning.ipynb
@@ -271,8 +271,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
+        "colab": {
+          "background_save": true
+        },
         "id": "W04Y7qUIElX1"
       },
       "outputs": [],
@@ -287,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2vDbn9i4EnWZ"
       },
@@ -304,7 +307,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "3wtZmWjWEtaY"
       },
@@ -318,7 +321,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "4Hmdmix8EwhB"
       },
@@ -335,7 +338,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "SDbJXc7zEx9H"
       },
@@ -347,7 +350,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "WoKY213iE0Wi"
       },
@@ -359,32 +362,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Pyh4rQNhE5r-",
-        "outputId": "9070fd0e-3881-42ac-b6c4-4a35f74c9ec5"
+        "outputId": "bad98d2f-7094-4089-e57e-a9082c5e0bd9"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
-            "  warnings.warn(\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7d94dcb42a50>"
+              "<keras.src.callbacks.History at 0x7cb651167640>"
             ]
           },
+          "execution_count": 8,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -399,24 +394,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xz403ILsRElm",
-        "outputId": "a6df9f9b-6240-4034-e3b9-00b2d068df36"
+        "outputId": "ab62b99d-7cf9-48c0-b3d0-eddc45edf27e"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7d94d849e5d0>"
+              "<keras.src.callbacks.History at 0x7cb642e36da0>"
             ]
           },
+          "execution_count": 15,
           "metadata": {},
-          "execution_count": 8
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -431,24 +426,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "llVDxCyoFKY6",
-        "outputId": "c46bf5c1-ea10-4a13-9752-cfff52535ee0"
+        "outputId": "f1d59e29-9156-4a75-f613-29fe467fae6a"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7d94d8046cf0>"
+              "<keras.src.callbacks.History at 0x7cb643165930>"
             ]
           },
+          "execution_count": 16,
           "metadata": {},
-          "execution_count": 9
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -463,7 +458,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "LaMvsE2wFOZ8"
       },
@@ -486,34 +481,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Il4FPyYwFTVw",
-        "outputId": "faadd7c5-908d-44c2-9528-e928faeb9520"
+        "outputId": "c21d3953-cc0b-41f3-f40e-47ce1d466393"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 403ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 35ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 143ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 112ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 30ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 29ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 27ms/step\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 28ms/step\n"
+            "1/1 [==============================] - 0s 22ms/step\n",
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "1/1 [==============================] - 0s 383ms/step\n",
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "1/1 [==============================] - 0s 20ms/step\n",
+            "1/1 [==============================] - 0s 410ms/step\n",
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 21ms/step\n",
+            "1/1 [==============================] - 0s 22ms/step\n",
+            "1/1 [==============================] - 0s 22ms/step\n"
           ]
         }
       ],
@@ -526,20 +521,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OSU-gCr9EHNg",
-        "outputId": "cb44818d-909f-41a3-ce5d-690295833557"
+        "outputId": "7d5a818c-cf95-4ca5-b64a-e088bb5a20fe"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "Generated Text (SimpleRNN): This is the first document document is\n",
+            "Generated Text (SimpleRNN): This is the first document document document\n",
             "Generated Text (GRU): This is the first document document document\n",
             "Generated Text (LSTM): This is the first document document document\n"
           ]
@@ -555,7 +550,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -564,8 +558,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
